unpackaged/main/default/objects/SPARTADMS__Document_Version__c/SPARTADMS__Document_Version__c.object-meta.xml
<CustomObject>
    <description>To track the document versions of an effective corporate document.</description>
    <label>Document Version</label>
    <nameField>
        <label>File Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>