unpackaged/main/default/objects/SPARTADMS__Document_Version__c/fields/SPARTADMS__Cover_Page_Detail__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Cover_Page_Detail__c</fullName>
        <description>Cover Page Details</description>
        <inlineHelpText>Cover Page Details</inlineHelpText>
        <label>Cover Page Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>