unpackaged/main/default/objects/SPARTADMS__Document_Version__c/fields/SPARTADMS__File_Name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__File_Name__c</fullName>
        <description>To store the file name</description>
        <inlineHelpText>To store the file name</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>