unpackaged/main/default/objects/SPARTADMS__Document_Version__c/fields/SPARTADMS__Related_Corporate_Document__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Corporate_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related corporate document</description>
        <inlineHelpText>Related corporate document</inlineHelpText>
        <label>Related Corporate Document</label>
        <referenceTo>SPARTADMS__Corporate_Document__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>Document_Versions</relationshipName>
        <type>Lookup</type>
    </CustomField>